# video-to-ascii

./: CMakeLists.txt  CMakePresets.json
include/: opencv-test.h
src/: main.cpp
